# binder

./: .travis.yml  Cargo.toml  search-index.js
binder/: BinderConnection.t.html  FIRST_CALL_TRANSACTION.v.html  IInterface.t.html  constant.FIRST_CALL_TRANSACTION.html  index.html  sidebar-items.js  struct.BinderConnection.html  struct.Handle.html  trait.IInterface.html
ci/: id_rsa.enc
encoding/: index.html
encoding_index_japanese/: index.html
encoding_index_korean/: index.html
encoding_index_simpchinese/: index.html
encoding_index_singlebyte/: index.html
encoding_index_tests/: index.html  macro.multi_byte_range_tests.html  macro.multi_byte_tests.html  macro.single_byte_tests.html
encoding_index_tradchinese/: index.html
error_chain/: struct.Backtrace.html
libc/: constant.NCCS.html  constant.RTLD_DEFAULT.html  constant.SEM_FAILED.html  constant.UT_HOSTSIZE.html  constant.UT_LINESIZE.html  constant.UT_NAMESIZE.html  constant.VDISCARD.html  constant.VEOF.html  constant.VEOL.html  constant.VEOL2.html  constant.VMIN.html  constant.VREPRINT.html  constant.VSTART.html  constant.VSTOP.html  constant.VSUSP.html  constant.VSWTC.html  constant.VTIME.html  constant.VWERASE.html  fn.__sched_cpualloc.html  fn.__sched_cpucount.html  fn.__sched_cpufree.html  fn.bind.html  fn.getnameinfo.html  fn.getutent.html  fn.madvise.html  fn.major.html  fn.makedev.html  fn.minor.html  fn.mprotect.html  fn.msync.html  fn.ppoll.html  fn.pthread_cond_init.html  fn.pthread_condattr_destroy.html  fn.pthread_condattr_getclock.html  fn.pthread_condattr_getpshared.html  (+52 more)
nix/: index.html  (+5 more)
(+705 files in other folders)
