[package]
name = "binder"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]

[dependencies]
encoding = "0.2"
nix = { git = "https://github.com/nix-rust/nix" }
libc = "0.2"
log = "0.3"
error-chain = "0.10"
byteorder = "1.1"
bitflags = { git = "https://github.com/tamird/bitflags", branch = "associated-constants" }
